[gd_scene load_steps=3 format=3 uid="uid://hxjahwxmmfk3"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_2srod"]
[ext_resource type="Texture2D" uid="uid://dgles13wfeoa3" path="res://images-backgrounds/menu.png" id="2_g7ee2"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_2srod")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_g7ee2")
expand_mode = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 136.0
offset_top = 452.5
offset_right = 336.0
offset_bottom = 582.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Play" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Play"

[node name="How-to" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "How to Play"

[node name="Credits" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Credits"

[connection signal="pressed" from="ButtonContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ButtonContainer/How-to" to="." method="_on_howto_pressed"]
[connection signal="pressed" from="ButtonContainer/Credits" to="." method="_on_credits_pressed"]
